# TerrainGeneratorOpenGL

./: .gitignore  CMakeLists.txt  README.md  balls.cpp
include/: camera.h  shader.h
shaders/: terrain.frag  terrain.vert
